--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
             <div class=""><img src="/img/dia futuro y pasado.jpg" alt="" class="container"></div>
             <div class=""> <img src="/img/hombre arañana.jpg" alt="" class="container"></div>
 
-            <div> <img src="/img/series/1.juego-de-tronos-primera-temporada-1558599291.jpg" alt="" class="container"></div>
-            <div> <img src="/img/series/2 hause of the dragon.jpeg" alt="" class="container"></div>
-            <div> <img src="/img/series/3. The last of us.jpg" alt="" class="container"></div>
-            <div> <img src="/img/series/4. images.jpeg" alt="" class="container"></div>
-            <div> <img src="/img/series/5. images.jpeg" alt="" class="container"></div>
-            <div> <img src="/img/series/6. supergirl.jpeg" alt="" class="container"></div>
-            <div> <img src="/img/series/7. leyenda del manaña.jpeg" alt="" class="container"></div>
-            <div> <img src="/img/series/8. loki.jpg" alt="" class="container"></div>
-            <div> <img src="/img//series/9. Dark.jpg" alt="" class="container"></div>
-            <div> <img src="/img/series/11.prision break.jpg" alt="" class="container"></div>
-            <div> <img src="/img/series/HouseMD-s1-UK-DVD.jpg" alt="" class="container"></div>
-            <div> <img src="/img/series/Heores.jpeg" alt="" class="container"></div>
-             <div> <img src="/img/series/12.la-casa-de-papel-tv-series-2017-spain-2017-season-1-created-by-alex-pina-spanish-poster-2F3NWWM.jpgq" alt="" class="series"></div>
+            <div> <img src="img/series/1.juego-de-tronos-primera-temporada-1558599291.jpg" alt="" class="container"></div>
+            <div> <img src="img/series/2 hause of the dragon.jpeg" alt="" class="container"></div>
+            <div> <img src="img/series/3. The last of us.jpg" alt="" class="container"></div>
+            <div> <img src="img/series/4. images.jpeg" alt="" class="container"></div>
+            <div> <img src="img/series/5. images.jpeg" alt="" class="container"></div>
+            <div> <img src="img/series/6. supergirl.jpeg" alt="" class="container"></div>
+            <div> <img src="img/series/7. leyenda del manaña.jpeg" alt="" class="container"></div>
+            <div> <img src="img/series/8. loki.jpg" alt="" class="container"></div>
+            <div> <img src="img//series/9. Dark.jpg" alt="" class="container"></div>
+            <div> <img src="img/series/11.prision break.jpg" alt="" class="container"></div>
+            <div> <img src="img/series/HouseMD-s1-UK-DVD.jpg" alt="" class="container"></div>
+            <div> <img src="img/series/Heores.jpeg" alt="" class="container"></div>
+             <div> <img src="img/series/12.la-casa-de-papel-tv-series-2017-spain-2017-season-1-created-by-alex-pina-spanish-poster-2F3NWWM.jpgq" alt="" class="series"></div>
 
         </div>
     </article>
