--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <div class=""><img src="img/harry potter 5.jpg" alt="" class="container"></div>
             <div class=""><img src="img/harry potter 6.jpg" alt="" class="container"></div>
 
-            <div class=""><img src="/img/x men 2.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/x men.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/x men 3.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/x men origen.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/x men 4.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/dia futuro y pasado.jpg" alt="" class="container"></div>
-            <div class=""> <img src="/img/hombre arañana.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/x men 2.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/x men.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/x men 3.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/x men origen.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/x men 4.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/dia futuro y pasado.jpg" alt="" class="container"></div>
+            <div class=""> <img src="img/hombre arañana.jpg" alt="" class="container"></div>
 
             <div> <img src="img/series/1.juego-de-tronos-primera-temporada-1558599291.jpg" alt="" class="container"></div>
             <div> <img src="img/series/2 hause of the dragon.jpeg" alt="" class="container"></div>
