--- a/pelicula.html
+++ b/pelicula.html
@@ -40,22 +40,22 @@
     <section>
         <article>
         <div class="container">
-            <div class=""><img src="/img/deadpool y wolverine.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/dia futuro y pasado.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/harry potter 1.jpg" alt="" class="container" ></div>
-            <div class=""><img src="/img/harry potter 2.jpg" alt="" class="container" ></div>
-            <div class=""><img src="/img/harry potter 3.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/harry potter 4.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/harry potter 5.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/harry potter 6.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/deadpool y wolverine.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/dia futuro y pasado.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/harry potter 1.jpg" alt="" class="container" ></div>
+            <div class=""><img src="img/harry potter 2.jpg" alt="" class="container" ></div>
+            <div class=""><img src="img/harry potter 3.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/harry potter 4.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/harry potter 5.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/harry potter 6.jpg" alt="" class="container"></div>
 
-            <div class=""><img src="/img/x men 2.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/x men.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/x men 3.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/x men origen.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/x men 4.jpg" alt="" class="container"></div>
-            <div class=""><img src="/img/dia futuro y pasado.jpg" alt="" class="container"></div>
-            <div class=""> <img src="/img/hombre arañana.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/x men 2.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/x men.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/x men 3.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/x men origen.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/x men 4.jpg" alt="" class="container"></div>
+            <div class=""><img src="img/dia futuro y pasado.jpg" alt="" class="container"></div>
+            <div class=""> <img src="img/hombre arañana.jpg" alt="" class="container"></div>
             
 
         </div>
