--- a/series.html
+++ b/series.html
@@ -40,19 +40,19 @@
   <section>
     <article >
         <div class="series">
-            <div> <img src="/img/series/1.juego-de-tronos-primera-temporada-1558599291.jpg" alt="" class="series"></div>
-            <div> <img src="/img/series/2 hause of the dragon.jpeg" alt="" class="series"></div>
-            <div> <img src="/img/series/3. The last of us.jpg" alt="" class="series"></div>
-            <div> <img src="/img/series/4. images.jpeg" alt="" class="series"></div>
-            <div> <img src="/img/series/5. images.jpeg" alt="" class="series"></div>
-            <div> <img src="/img/series/6. supergirl.jpeg" alt="" class="series"></div>
-            <div> <img src="/img/series/7. leyenda del manaña.jpeg" alt="" class="series"></div>
-            <div> <img src="/img/series/8. loki.jpg" alt="" class="series"></div>
-            <div> <img src="/img//series/9. Dark.jpg" alt="" class="series"></div>
-            <div> <img src="/img/series/11.prision break.jpg" alt="" class="series"></div>
-            <div> <img src="/img/series/HouseMD-s1-UK-DVD.jpg" alt="" class="series"></div>
-            <div> <img src="/img/series/Heores.jpeg" alt="" class="series"></div>
-            <div> <img src="/img/series/12.la-casa-de-papel-tv-series-2017-spain-2017-season-1-created-by-alex-pina-spanish-poster-2F3NWWM.jpgq" alt="" class="series"></div>
+            <div> <img src="img/series/1.juego-de-tronos-primera-temporada-1558599291.jpg" alt="" class="series"></div>
+            <div> <img src="img/series/2 hause of the dragon.jpeg" alt="" class="series"></div>
+            <div> <img src="img/series/3. The last of us.jpg" alt="" class="series"></div>
+            <div> <img src="img/series/4. images.jpeg" alt="" class="series"></div>
+            <div> <img src="img/series/5. images.jpeg" alt="" class="series"></div>
+            <div> <img src="img/series/6. supergirl.jpeg" alt="" class="series"></div>
+            <div> <img src="img/series/7. leyenda del manaña.jpeg" alt="" class="series"></div>
+            <div> <img src="img/series/8. loki.jpg" alt="" class="series"></div>
+            <div> <img src="img//series/9. Dark.jpg" alt="" class="series"></div>
+            <div> <img src="img/series/11.prision break.jpg" alt="" class="series"></div>
+            <div> <img src="img/series/HouseMD-s1-UK-DVD.jpg" alt="" class="series"></div>
+            <div> <img src="img/series/Heores.jpeg" alt="" class="series"></div>
+            <div> <img src="img/series/12.la-casa-de-papel-tv-series-2017-spain-2017-season-1-created-by-alex-pina-spanish-poster-2F3NWWM.jpgq" alt="" class="series"></div>
         </div>
     </article>
   </section>
